--- a/web/src/app/user/include/header/header.page.html
+++ b/web/src/app/user/include/header/header.page.html
@@ -1,9 +1,10 @@
+
 <ion-header id="header" [translucent]="true">
   <ion-toolbar>
     <ion-grid class="head-grid">
       <ion-row>
         <ion-col size="2">
-          <ion-icon id="menu" name="menu" aria-label="Menu"></ion-icon>
+            <ion-icon  class="menu" name="menu" aria-label="Menu"></ion-icon>
         </ion-col>
         <ion-col size="8">
           <ion-title class="p-0 m-0" style="font-size: 100%;" id="title">
@@ -17,3 +18,4 @@
     </ion-grid>
   </ion-toolbar>
 </ion-header>
+
