--- a/web/src/app/user/include/header/header.page.html
+++ b/web/src/app/user/include/header/header.page.html
@@ -1,21 +1,17 @@
+<ion-header [translucent]="true" collapse="fade" class="ion-no-border">
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button color="medium"></ion-menu-button>
+    </ion-buttons>
+    <ion-title class="text-center" position="stacked" [routerLink]="['/user', 'home']"  size="medium"> PowerCal
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['/user','notifications']">
+        <ion-icon name="person-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
 
-<ion-header id="header" [translucent]="true">
-  <ion-toolbar>
-    <ion-grid class="head-grid">
-      <ion-row>
-        <ion-col size="2">
-            <ion-icon  class="menu" name="menu" aria-label="Menu"></ion-icon>
-        </ion-col>
-        <ion-col size="8">
-          <ion-title class="p-0 m-0" style="font-size: 100%;" id="title">
-            <ion-router-link routerLink="/user/home"><h2 style="width: 100%;" class="m-0">Power Calc</h2></ion-router-link>
-          </ion-title>
-        </ion-col>
-        <ion-col size="2">
-          <ion-icon id="person" name="person" aria-label="Profile"></ion-icon>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+
   </ion-toolbar>
-</ion-header>
 
+</ion-header>
