--- a/web/src/app/user/include/header/header.page.html
+++ b/web/src/app/user/include/header/header.page.html
@@ -6,7 +6,7 @@
     <ion-title class="text-center" position="stacked" [routerLink]="['/user', 'home']"  size="medium"> PowerCal
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button [routerLink]="['/user','notifications']">
+      <ion-button [routerLink]="['/user','profile']">
         <ion-icon name="person-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
