--- a/web/src/app/user/view-property/view-property.page.html
+++ b/web/src/app/user/view-property/view-property.page.html
@@ -15,3 +15,265 @@
   </ion-toolbar>
 
 </ion-header>
+
+<ion-content *ngIf="house">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste">
+      <ion-label class="label">Device list</ion-label>
+       <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{house?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of house">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddevicehouse(house)" expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singlehouseproperty(house)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
+
+<ion-content *ngIf="store">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste">
+      <ion-label class="label">Device list</ion-label>
+       <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{store?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of store">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddevicestore(store)"  expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singlestoreproperty(store)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
+
+<ion-content *ngIf="agency">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste">
+      <ion-label class="label">Device list</ion-label>
+       <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{agency?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of agency">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddeviceagency(agency)" expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singleagencyproperty(agency)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
+
+<ion-content *ngIf="company">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste" >
+      <ion-label class="label">Device list</ion-label>
+      <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{company?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of company">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddevicecompany(company)" expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singlecompanyproperty(company)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content><ion-content *ngIf="house">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste">
+      <ion-label class="label">Device list</ion-label>
+       <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{house?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of house">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddevicehouse(house)" expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singlehouseproperty(house)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
+
+<ion-content *ngIf="store">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste">
+      <ion-label class="label">Device list</ion-label>
+       <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{store?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of store">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddevicestore(store)"  expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singlestoreproperty(store)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
+
+<ion-content *ngIf="agency">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste">
+      <ion-label class="label">Device list</ion-label>
+       <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{agency?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of agency">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddeviceagency(agency)" expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singleagencyproperty(agency)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
+
+<ion-content *ngIf="company">
+  <div class="view-PropertyHeader">
+    <h2 class="custom-h5">View-Property</h2>
+  </div>
+  <div class="view-PropertyButtom">
+    <h5 shape="round" expand="block">{{propertyType}}</h5>
+  </div>
+  <ion-row class="">
+    <div class="device-liste" >
+      <ion-label class="label">Device list</ion-label>
+      <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">{{company?.length}}</ion-label>
+        </ion-item>
+        <ion-item class="p-0 m-0" *ngFor="let item of company">
+          <ion-label class="p-0 m-0">{{item.de_name}}</ion-label>
+          <ion-button >
+            <ion-icon class="p-1" id="edit" name="pencil" aria-label="edit"></ion-icon>
+          </ion-button>
+          <ion-button >
+            <ion-icon class="p-1" id="trash" name="trash" aria-label="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
+      <div class="button-container">
+        <ion-button (click)="Adddevicecompany(company)" expand="block" color="primary">Add Invoice</ion-button>
+        <ion-button (click)="Singlecompanyproperty(company)" expand="block" color="secondary">Generate Invoice</ion-button>
+      </div>
+    </div>
+  </ion-row>
+</ion-content>
