--- a/web/src/app/user/home/home.page.html
+++ b/web/src/app/user/home/home.page.html
@@ -34,8 +34,8 @@
         routerLink="/user/add-property">add a property</ion-router-link>
       <ion-list style="height: 30px; background-color: rgb(233, 233, 233);">
       </ion-list>
-      <ion-grid class="p-0">
-        <ion-row *ngFor="let item of type_property" class="p-0"
+      <ion-grid  class="p-0">
+        <ion-row *ngIf="house?.length!=0" class="p-0"
           style="display: flex; align-items: center; height: auto; justify-content: space-around;">
           <ion-col style="display: flex; justify-content: space-between;" size="8">
             <ion-col style="padding-top: 13px;" size="2">
@@ -43,12 +43,66 @@
             </ion-col>
             <ion-col style="padding-top: 9px;" size="10">
               <h2 style="text-align: left;">
-                <h3 class="m-0 h3">{{item.type}}</h3>
+                <h3 *ngFor="let item of house" class="m-0 h3">{{item.de_property}}</h3>
               </h2>
             </ion-col>
           </ion-col>
           <ion-col class="p-0 pt-1 pb-1" size="4">
-            <ion-button (click)="Singleproperty(item.type)" class="custom-button">
+            <ion-button *ngFor="let item of house_property"  (click)="Singleproperty(item.type)" class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="store?.length!=0" class="p-0"
+          style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10">
+              <h2 style="text-align: left;">
+                <h3 *ngFor="let item of store" class="m-0 h3">{{item.de_property}}</h3>
+              </h2>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button *ngFor="let item of store_property" (click)="Singleproperty(item.type)" class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="agency?.length!=0" class="p-0"
+          style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10">
+              <h2 style="text-align: left;">
+                <h3 *ngFor="let item of agency" class="m-0 h3">{{item.de_property}}</h3>
+              </h2>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button *ngFor="let item of agency_property"  (click)="Singleproperty(item.type)" class="custom-button">
+              <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="company?.length!=0" class="p-0"
+          style="display: flex; align-items: center; height: auto; justify-content: space-around;">
+          <ion-col style="display: flex; justify-content: space-between;" size="8">
+            <ion-col style="padding-top: 13px;" size="2">
+              <ion-icon style="color: black;" id="home" name="home" aria-label="home"></ion-icon>
+            </ion-col>
+            <ion-col style="padding-top: 9px;" size="10">
+              <h2 style="text-align: left;">
+                <h3 *ngFor="let item of company" class="m-0 h3">{{item.de_property}}</h3>
+              </h2>
+            </ion-col>
+          </ion-col>
+          <ion-col class="p-0 pt-1 pb-1" size="4">
+            <ion-button *ngFor="let item of company_property"  (click)="Singleproperty(item.type)" class="custom-button">
               <ion-icon id="view" name="eye" aria-label="view"></ion-icon>
             </ion-button>
           </ion-col>
