--- a/web/src/app/user/user.page.html
+++ b/web/src/app/user/user.page.html
@@ -27,19 +27,9 @@
         
       </ion-list>
 
-      <ion-list id="labels-list">
-        <ion-list-header>Settings</ion-list-header>
-        <ion-menu-toggle>
-          <ion-item  lines="none" routerDirection="root" routerLink="/user/edit-pin-code">
-            <ion-icon color="primary" slot="start" ios="lock-closed-outline" md="lock-closed-sharp"></ion-icon>
-            <ion-label></ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-
       <ion-list id="labels-list"> 
         <ion-menu-toggle>
-          <ion-list-header>Help and contact</ion-list-header>
+          <!-- <ion-list-header>Help and contact</ion-list-header> -->
 
           <ion-item  routerDirection="root" routerLink="" lines="none">
             <ion-icon color="primary" slot="start" ios="share-social-outline" md="share-social-sharp"></ion-icon>
@@ -52,6 +42,19 @@
           <ion-item  routerDirection="root" routerLink="/user/about-us" lines="none">
             <ion-icon color="primary" slot="start" ios="alert-circle-outline" md="alert-circle-sharp"></ion-icon>
             <ion-label>About</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+      <br><br><br>
+      <br><br><br>
+
+      <ion-list id="labels-list">
+        <ion-list-header>Settings</ion-list-header>
+        <ion-menu-toggle>
+          <ion-item  lines="none" routerDirection="root" routerLink="/user/edit-pin-code">
+            <ion-icon color="primary" slot="start" ios="lock-closed-outline" md="lock-closed-sharp"></ion-icon>
+            <ion-label></ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
