--- a/web/src/app/user/user.page.scss
+++ b/web/src/app/user/user.page.scss
@@ -2,7 +2,7 @@ ion-split-pane {
     --border: none !important;
 
     ion-menu {
-        --background: linear-gradient(to right, #FFA500, #008000)!important;
+        --background: #b7f1d6 !important;
 
         ion-content {
             --background: transparent !important;
