--- a/web/src/app/user/user.page.html
+++ b/web/src/app/user/user.page.html
@@ -46,15 +46,15 @@
         </ion-menu-toggle>
       </ion-list>
 
-      <br><br><br>
-      <br><br><br>
+      <!-- <br><br><br> -->
+      <!-- <br><br><br> -->
 
       <ion-list id="labels-list">
-        <ion-list-header>Settings</ion-list-header>
+        <!-- <ion-list-header>Settings</ion-list-header> -->
         <ion-menu-toggle>
           <ion-item  lines="none" routerDirection="root" routerLink="/user/edit-pin-code">
             <ion-icon color="primary" slot="start" ios="lock-closed-outline" md="lock-closed-sharp"></ion-icon>
-            <ion-label></ion-label>
+            <ion-label>Settings</ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
