--- a/web/src/app/user/home/home.page.html
+++ b/web/src/app/user/home/home.page.html
@@ -35,7 +35,7 @@
       <ion-list style="height: 30px; background-color: rgb(233, 233, 233);">
       </ion-list>
       <ion-grid  class="p-0">
-        <ion-row *ngIf="house?.length!=0" class="p-0"
+        <ion-row *ngIf="house?.length!==0" class="p-0"
           style="display: flex; align-items: center; height: auto; justify-content: space-around;">
           <ion-col style="display: flex; justify-content: space-between;" size="8">
             <ion-col style="padding-top: 13px;" size="2">
@@ -53,7 +53,7 @@
             </ion-button>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="store?.length!=0" class="p-0"
+        <ion-row *ngIf="store?.length!==0" class="p-0"
           style="display: flex; align-items: center; height: auto; justify-content: space-around;">
           <ion-col style="display: flex; justify-content: space-between;" size="8">
             <ion-col style="padding-top: 13px;" size="2">
@@ -71,7 +71,7 @@
             </ion-button>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="agency?.length!=0" class="p-0"
+        <ion-row *ngIf="agency?.length!==0" class="p-0"
           style="display: flex; align-items: center; height: auto; justify-content: space-around;">
           <ion-col style="display: flex; justify-content: space-between;" size="8">
             <ion-col style="padding-top: 13px;" size="2">
@@ -89,7 +89,7 @@
             </ion-button>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="company?.length!=0" class="p-0 "
+        <ion-row *ngIf="company?.length!==0" class="p-0 "
           style="display: flex; align-items: center; height: auto; justify-content: space-around;">
           <ion-col style="display: flex; justify-content: space-between;" size="8">
             <ion-col style="padding-top: 13px;" size="2">
