--- a/web/src/app/user/user.page.scss
+++ b/web/src/app/user/user.page.scss
@@ -2,7 +2,8 @@ ion-split-pane {
     --border: none !important;
 
     ion-menu {
-        --background: #ffffff !important;
+        --background: linear-gradient(to right, #f5dc7a, #ff914d);
+        background: #ffffff !important;
 
         ion-content {
             --background: transparent !important;
