--- a/web/src/app/user/user.page.scss
+++ b/web/src/app/user/user.page.scss
@@ -3,7 +3,7 @@ ion-split-pane {
 
     ion-menu {
         --background: linear-gradient(to right, #f5dc7a, #ff914d);
-        background: #ffffff !important;
+        background: #fff !important;
 
         ion-content {
             --background: transparent !important;
