--- a/web/src/app/user/user.page.html
+++ b/web/src/app/user/user.page.html
@@ -12,7 +12,7 @@
       
 
       <ion-list id="inbox-list">
-        <h2 class=" ion-text-capitalize"> </h2>
+        <h2 class=" ion-text-capitalize">  </h2>
         <ion-label>  </ion-label>
         <!-- <ion-note class="ion-text-center"></ion-note> -->
 
@@ -27,6 +27,74 @@
         
       </ion-list>
 
+      <ion-list id="labels-list">
+        <ion-menu-toggle>
+          <ion-item routerDirection="root" routerLink="/user/profile" lines="none">
+            <ion-icon color="primary" slot="start" ios="person-outline" md="person-sharp"></ion-icon>
+            <ion-label>Profile</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+      <ion-list id="labels-list">
+        <ion-menu-toggle>
+          <ion-item routerDirection="root" routerLink="/user/notifications" lines="none">
+            <ion-icon color="primary" slot="start" ios="notifications-outline" md="notifications-sharp"></ion-icon>
+            <ion-label>Notifications</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+      <ion-list id="labels-list">
+        <ion-menu-toggle>
+          <ion-item routerDirection="root" routerLink="/user/preferences" lines="none">
+            <ion-icon color="primary" slot="start" ios="settings-outline" md="settings-sharp"></ion-icon>
+            <ion-label>Preferences</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+      <ion-list id="labels-list">
+        <ion-menu-toggle>
+          <ion-item routerDirection="root" routerLink="/user/history" lines="none">
+            <ion-icon color="primary" slot="start" ios="time-outline" md="time-sharp"></ion-icon>
+            <ion-label>History</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+      
+      <ion-list id="labels-list">
+        <ion-menu-toggle>
+          <ion-item routerDirection="root" routerLink="/user/help" lines="none">
+            <ion-icon color="primary" slot="start" ios="help-circle-outline" md="help-circle-sharp"></ion-icon>
+            <ion-label>Help</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+      <ion-list id="labels-list">
+        <ion-menu-toggle>
+          <ion-item routerDirection="root" routerLink="/user/terms" lines="none">
+            <ion-icon color="primary" slot="start" ios="document-text-outline" md="document-text-sharp"></ion-icon>
+            <ion-label>Terms of Use</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+      <ion-list id="labels-list"> 
+        <ion-menu-toggle>
+          <!-- <ion-list-header>Help and contact</ion-list-header> -->
+          <ion-item  routerDirection="root" routerLink="/user/about-us" lines="none">
+            <ion-icon color="primary" slot="start" ios="alert-circle-outline" md="alert-circle-sharp"></ion-icon>
+            <ion-label>About</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+
+
+
+
       <ion-list id="labels-list"> 
         <ion-menu-toggle>
           <!-- <ion-list-header>Help and contact</ion-list-header> -->
@@ -34,14 +102,6 @@
           <ion-item  routerDirection="root" routerLink="" lines="none">
             <ion-icon color="primary" slot="start" ios="share-social-outline" md="share-social-sharp"></ion-icon>
             <ion-label>Share the App</ion-label>
-          </ion-item>
-          <!-- <ion-item  routerDirection="root" routerLink="/user/contact-us" lines="none">
-            <ion-icon slot="start" ios="call-outline" md="call-sharp"></ion-icon>
-            <ion-label>Contact us</ion-label>
-          </ion-item> -->
-          <ion-item  routerDirection="root" routerLink="/user/about-us" lines="none">
-            <ion-icon color="primary" slot="start" ios="alert-circle-outline" md="alert-circle-sharp"></ion-icon>
-            <ion-label>About</ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
