--- a/web/src/app/user/user.page.html
+++ b/web/src/app/user/user.page.html
@@ -54,14 +54,14 @@
         </ion-menu-toggle>
       </ion-list>
 
-      <ion-list id="labels-list">
+      <!-- <ion-list id="labels-list">
         <ion-menu-toggle>
           <ion-item routerDirection="root" routerLink="/user/history" lines="none">
             <ion-icon color="primary" slot="start" ios="time-outline" md="time-sharp"></ion-icon>
             <ion-label>History</ion-label>
           </ion-item>
         </ion-menu-toggle>
-      </ion-list>
+      </ion-list> -->
       
       <ion-list id="labels-list">
         <ion-menu-toggle>
